Migrated from JCommander to picocli for niemtran and scheval commands